rnsc/tests/snapshots/error-lexer-directives-dot_string_literal.snap
---
source: rns-asm/tests/rns_test.rs
expression: "&snapshot_content"
---
----- DISASSEMBLED -----
not generated
----- INPUT -----
."Hello@World!"      ;;;;;;;;;; -_-
----- STDERR -----
Error: unknown directive
   ╭─[ test_data/integration/error/lexer/directives/dot_string_literal.rns:1:1 ]
   │
 1 │ ."Hello@World!"      ;;;;;;;;;; -_-
   │ ───────┬───────  
   │        ╰───────── unknown directive
   │ 
   │ Note: Valid directives are .class, .super, .method, .end, .code, .annotation
───╯
----- HASH -----
not generated
